--- a/src/views/partials/footer.ejs
+++ b/src/views/partials/footer.ejs
@@ -59,12 +59,12 @@
                         <div class="footer">
                             <h3 class="footer-title">Categorías</h3>
                             <ul class="footer-links">
-                                <li><a href="/mobiles/store/1?&categoria=1">Móviles</a></li>
-                                <li><a href="/mobiles/store/1?&categoria=2">SmartTV</a></li>
-                                <li><a href="/mobiles/store/1?&categoria=3">Laptops</a></li>
-                                <li><a href="/mobiles/store/1?&categoria=4">Consolas</a></li>
-                                <li><a href="/mobiles/store/1?&categoria=5">Tablets</a></li>
-                                <li><a href="/mobiles/store/1?&categoria=6">Otros</a></li>
+                                <li><a href="/store/1?&categoria=1">Móviles</a></li>
+                                <li><a href="/store/1?&categoria=2">SmartTV</a></li>
+                                <li><a href="/store/1?&categoria=3">Laptops</a></li>
+                                <li><a href="/store/1?&categoria=4">Consolas</a></li>
+                                <li><a href="/store/1?&categoria=5">Tablets</a></li>
+                                <li><a href="/store/1?&categoria=6">Otros</a></li>
                             </ul>
                         </div>
                     </div>
@@ -73,8 +73,8 @@
                         <div class="footer">
                             <h3 class="footer-title">Información</h3>
                             <ul class="footer-links">
-                                <li><a href="/mobiles/about">Sobre nosotros</a></li>
-                                <li><a href="/mobiles/contact">Contactanos</a></li>
+                                <li><a href="/about">Sobre nosotros</a></li>
+                                <li><a href="/contact">Contactanos</a></li>
                                 <li><a href="#">Politicas de privacidad</a></li>
                                 <li><a href="#">Pedidos y devoluciones</a></li>
                                 <li><a href="#">Terminos y Condiciones</a></li>
@@ -86,7 +86,7 @@
                             <h3 class="footer-title">Servicios</h3>
                             <ul class="footer-links">
                                 <li><a href="#">Mi Cuenta</a></li>
-                                <li><a href="/mobiles/cart">Ver Carrito</a></li>
+                                <li><a href="/cart">Ver Carrito</a></li>
                                 <li><a href="#">Favoritos</a></li>
                                 <li><a href="#">Mi Pedido</a></li>
                                 <li><a href="#">Ayuda</a></li>
