--- a/src/views/store/product.ejs
+++ b/src/views/store/product.ejs
@@ -421,7 +421,7 @@
 						<div class="col-md-3 col-xs-6">
 							<div class="product">
 								<div class="product-img">
-									<a href="/mobiles/product/<%= producto.id %>?color=<%= producto.color %>">
+									<a href="/product/<%= producto.id %>?color=<%= producto.color %>">
 										<img src="<%= producto.imagen || '/img/iphone12black.png' %>" alt="<%= producto.nombre %>">
 									
 									<div class="product-label">
