--- a/public/css/style.css
+++ b/public/css/style.css
@@ -517,31 +517,159 @@ textarea.input {
 \*----------------------------*/
 
 .header-search {
-  padding: 15px 0px;
+  padding: 15px 0;
 }
 
 .header-search form {
   position: relative;
+  display: flex;
+  align-items: center;  
+  width: 100%;
 }
 
-.header-search form .input-select {
-  margin-right: -4px;
-  border-radius: 40px 0px 0px 40px;
+.search-wrapper {
+  position: relative;
+  flex-grow: 1; 
 }
 
-.header-search form .input {
-  width: calc(100% - 260px);
-  margin-right: -4px;
-}
-
-.header-search form .search-btn {
+.input {
+  width: 100%;
+  padding-right: 40px; 
   height: 40px;
-  width: 100px;
-  background: #D10024;
-  color: #FFF;
-  font-weight: 700;
+  border-radius: 6px;
+  font-size: 16px;
+  border: 1px solid #ccc;  
+  padding-left: 20px;  
+}
+
+.search-icon-btn {
+  position: absolute;
+  top: 50%;
+  right: 10px; 
+  transform: translateY(-50%);
+  background: none;
   border: none;
-  border-radius: 0px 40px 40px 0px;
+  color: gray;
+  font-size: 18px;
+  pointer-events: auto;
+}
+
+#search-results {
+  position: absolute;
+  width: 555px; 
+  top: 80%; 
+  left: 15px;
+  right: 200px;
+  background-color: #fff;
+  border: 1px solid #ccc;
+  border-radius: 4px;
+  box-shadow: 0 2px 10px rgba(243, 12, 12, 0.1);
+  max-height: 400px;
+  overflow-y: auto;
+  z-index: 1000;
+  display: none;
+}
+
+.search-result-item a {
+  display: flex;
+  width: 100%;
+  text-decoration: none;
+  color: inherit;
+}
+
+.search-result-item .product-info {
+  flex-grow: 1;
+  min-width: 0;
+}
+
+.search-result-item h4 {
+  font-size: 16px;
+  margin: 0 0 5px 0;
+  white-space: nowrap;
+  overflow: hidden;
+  text-overflow: ellipsis;
+  width: 80%;
+}
+
+.search-result-item img {
+  width: 50px;
+  height: 50px;
+  object-fit: cover;
+  margin-right: 10px;
+}
+
+.search-result-item .product-price {
+  color: #D10024;
+  font-weight: bold;
+}
+
+.search-result-item .product-old-price {
+  color: rgb(180, 178, 178);
+  text-decoration: line-through;
+}
+
+.search-result-item.no-results {
+  color: gray;
+  text-align: center;
+  padding: 20px;
+}
+
+@media (max-width: 768px) {
+  #search-results {
+    width: 90%; 
+    left: 5%;
+    right: 5%;
+  }
+
+  .input {
+    font-size: 14px; 
+    height: 35px; 
+  }
+
+  .search-icon-btn {
+    font-size: 16px; 
+    right: 8px;
+  }
+
+  .search-result-item img {
+    width: 40px;
+    height: 40px;
+  }
+
+  .search-result-item h4 {
+    font-size: 14px;
+    width: 70%; 
+  }
+
+  .search-result-item .product-price {
+    font-size: 14px;
+  }
+}
+
+@media (max-width: 480px) {
+  .input {
+    font-size: 12px;
+    height: 30px;
+  }
+
+  .search-icon-btn {
+    font-size: 14px;
+    right: 5px;
+  }
+
+  .search-result-item h4 {
+    font-size: 12px;
+    width: 65%;
+  }
+
+  .search-result-item img {
+    width: 35px;
+    height: 35px;
+  }
+
+  .search-result-item .product-price {
+    font-size: 12px;
+  }
 }
 
 /*----------------------------*\
@@ -2004,7 +2132,6 @@ textarea.input {
   border-top: 2px solid #E4E7ED;
   margin-top: 30px;
 }
-
 
 .newsletter-follow {
   text-align: center;
