--- a/src/views/login/forgotPass/email.ejs
+++ b/src/views/login/forgotPass/email.ejs
@@ -1,21 +1,7 @@
-<!DOCTYPE html>
-<html lang="en">
+<%- include('../../components/header.ejs') %>
 
-<head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>LaVegaTech</title>
-  <link rel="icon" type="image/png" href="/img/lavegatech-logo.png">
-  <link type="text/css" rel="stylesheet" href="/css/login.css" />
-
-</head>
-<body>
-
-  <div class="logo-container">
-    <a href="/" class="logo"><img src="/img/lavegatech-logo.png" alt=""></a>
-</div>
-
-  <div class="login-container">
+</body>
+  <div class="email-container">
     <h2>Ayuda con la contraseña</h2>
     <p>Escribe la dirección de correo electrónico asociada a tu cuenta.</p>
 
@@ -30,4 +16,5 @@
     <% } %>
 
 </body>
-</html>
+
+<%- include('../../components/footer.ejs') %>
