--- a/src/views/login/register.ejs
+++ b/src/views/login/register.ejs
@@ -1,43 +1,34 @@
-<!DOCTYPE html>
-<html lang="es">
-<head>
-  <meta charset="UTF-8">
-  <title>LaVegaTech</title>
-  <link rel="icon" type="image/png" href="/img/lavegatech-logo.png">  
-  <link type="text/css" rel="stylesheet" href="/css/login.css" />
-</head>
+<%- include('../components/header.ejs') %>
+
 <body>
 
-  <div class="logo-container">
-    <a href="/" class="logo"><img src="/img/lavegatech-logo.png" alt=""></a>
-</div>
-
-<div class="login-container">
+<div class="register-container">
   <h2>Crear cuenta</h2>
 
   <form action="/api/auth/register" method="POST">
     <label>Nombre de usuario:</label>
-    <input type="text" name="username" value="<%= username || '' %>" required>
+    <input type="text" name="username" value="<%= username || '' %>" placeholder="Introducir nombre de usuario" required>
 
     <label>Correo electrónico:</label>
-    <input type="email" name="email" value="<%= email || '' %>" required>
+    <input type="email" name="email" value="<%= email || '' %>"  placeholder="Introducir correo electrónico" required>
 
     <label>Contraseña:</label>
-    <input type="password" name="password" required>
+    <input type="password" name="password"  placeholder="Introducir contraseña" required>
     
     <label>Confirmar contraseña:</label>
-    <input type="password" name="confirmPassword" required>
+    <input type="password" name="confirmPassword"  placeholder="Repetir contraseña" required>
+
+<% if (error) { %>
+    <p style="color:red"><%= error %></p>
+  <% } %>
+
 
     <button type="submit">Registrarse</button>
   </form>
 
-  <% if (error) { %>
-    <p style="color:red"><%= error %></p>
-  <% } %>
-
   <div class="links">
   <p>¿Ya tienes una cuenta? <a href="/login">Inicia sesión</a></p>
 </div>
+</div>  
 
-</body>
-</html>
+<%- include('../components/footer.ejs') %>
