--- a/src/views/partials/footer.ejs
+++ b/src/views/partials/footer.ejs
@@ -75,9 +75,8 @@
                             <ul class="footer-links">
                                 <li><a href="/about">Sobre nosotros</a></li>
                                 <li><a href="/contact">Contactanos</a></li>
-                                <li><a href="#">Politicas de privacidad</a></li>
-                                <li><a href="#">Pedidos y devoluciones</a></li>
-                                <li><a href="#">Terminos y Condiciones</a></li>
+                                <li><a href="/conditions">Politicas y Condiciones</a></li>
+                                <li><a href="/warranty">Garantías</a></li>
                             </ul>
                         </div>
                     </div>
