--- a/src/views/partials/header.ejs
+++ b/src/views/partials/header.ejs
@@ -36,6 +36,13 @@
     <!-- About -->
     <link type="text/css" rel="stylesheet" href="/css/about.css" />
 
+    <!-- Conditions -->
+    <link type="text/css" rel="stylesheet" href="/css/conditions.css" />
+
+    <!-- Warranty -->
+    <link type="text/css" rel="stylesheet" href="/css/warranty.css" />
+
+
    <!-- <link rel="stylesheet" href="/zay/bootstrap.min.css">
     <link rel="stylesheet" href="/zay/templatemo.css">
 
