--- a/src/views/store/about.ejs
+++ b/src/views/store/about.ejs
@@ -9,7 +9,7 @@
         <div class="fila align-items-center py-5">
             <div class="columna-texto text-dark">
                 <h1 class="sobre-nosotros">Sobre Nosotros</h1>
-                <p class="parrafo">
+                <p class="parrafo-about">
                     <img class="lavega" src="/img/lavegatech-logo.png" type="image/png"> es la tienda líder en tecnología, con productos de calidad 
                     y un excelente servicio al cliente. Llevamos años sirviendo a la comunidad de <strong>La Vega</strong>  con lo último en dispositivos electrónicos.
                 </p>
@@ -26,8 +26,8 @@
 <section class="contenedor-2 py-5">
     <div class="fila text-center pt-5 pb-3">
         <div class="columna-lg-6 m-auto">
-            <h1 class="titulo">Nuestros Servicios</h1>
-            <p class="parrafo">
+            <h1 class="titulo-about">Nuestros Servicios</h1>
+            <p class="parrafo-about">
                 En <img class="lavega" src="/img/lavegatech-logo.png" type="image/png">, estamos comprometidos a ofrecerte una experiencia de compra superior con los siguientes servicios:
             </p>
         </div>
@@ -71,8 +71,8 @@
         <!-- Encabezado -->
         <div class="fila text-center pt-5 pb-3">
             <div class="columna-lg-6 m-auto">
-                <h1 class="titulo">Sobre nuestra empresa</h1>
-                <p class="parrafo">
+                <h1 class="titulo-about">Sobre nuestra empresa</h1>
+                <p class="parrafo-about">
                     <img class="lavega" src="/img/lavegatech-logo.png" alt="La Vega Tech"> es la tienda líder en tecnología, con productos de calidad 
                     y un excelente servicio al cliente. Llevamos años sirviendo a la comunidad de <strong>La Vega</strong> con lo último en dispositivos electrónicos.
                 </p>
