--- a/src/views/partials/footer.ejs
+++ b/src/views/partials/footer.ejs
@@ -139,5 +139,8 @@
     <script src="/js/jquery.zoom.min.js"></script>
     <script src="/js/main.js"></script>
     <script src="/js/cart.js"></script>
+    <script src="/js/search.js"></script>
+    <script src="/js/cartPreview.js"></script>
+
 </body>
 </html>
